php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #46623 phpinfo() doesn't show compile time home with phpize install
Submitted: 2008-11-19 20:09 UTC Modified: 2009-03-11 17:06 UTC
From: sixd@php.net Assigned: sixd (profile)
Status: Closed Package: OCI8 related
PHP Version: 5.3.0alpha2 OS: Linux
Private report: No CVE-ID: None
 [2008-11-19 20:09 UTC] sixd@php.net
Description:
------------
If OCI8 is installed from PECL, then phpinfo() doesn't show anything for the "Compile-time ORACLE_HOME" or "Libraries Used" field.  

There is no runtime impact on scripts because these are strings constructed at build time,

The incorrect macros values are:
  PHP_OCI8_SHARED_LIB_ADD
  PHP_OCI8_DIR

The macros are defined as empty strings in the pre-existing /usr/include/php/main/build-def.h. Nothing in phpize/configure overrides them.

The PHP_OCI8_VERSION value is correct since it is overridden in php_oci8.h (after Steph's PECL versioning project)

Potential solution is to change config.m4 and add these lines at the
end of the ORACEL_HOME and Instant Client blocks:

  AC_DEFINE_UNQUOTED(PHP_OCI8_DEF_DIR, "$OCI8_DIR", [ ])
  AC_DEFINE_UNQUOTED(PHP_OCI8_DEF_SHARED_LIBADD, "$OCI8_SHARED_LIBADD", [ ])

Then change oci8.c to use the new macros:

#ifdef PHP_OCI8_DEF_DIR
	php_info_print_table_row(2, "Compile-time ORACLE_HOME", PHP_OCI8_DEF_DIR);
#endif
#ifdef PHP_OCI8_DEF_SHARED_LIBADD
	php_info_print_table_row(2, "Libraries Used", PHP_OCI8_DEF_SHARED_LIBADD);
#endif


Reproduce code:
---------------
tar -zxf oci8-1.3.4.tgz
cd oci8-1.3.4
phpize && ./configure --with-oci8=shared,$ORACLE_HOME && make install
[Add extension=oci8.so to php.ini]
php -i |grep ORACLE_HOME

Expected result:
----------------
phpinfo() should show:

Compile-time ORACLE_HOME => /home/oracle/app/oracle

Actual result:
--------------
phpinfo() shows:

Compile-time ORACLE_HOME =>

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-11-21 12:44 UTC] jani@php.net
Sixd, when you assign something to yourself, change the status too.
 [2009-03-09 17:53 UTC] sixd@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 15:00:01 2026 UTC