MFH: Bug #46623 (phpinfo doesn't show compile time ORACLE_HOME with phpize)